@@ -1,0 +1,9 @@
+#include <stdarg.h>
+#include <string.h>
+#include <wchar.h>
+#include <tchar.h>
+#include <ntdll/rtl.h>
+#define NTOS_MODE_USER
+#include <ntos.h>
+#include <windows.h>
+#include <rosrtl/string.h>
