@@ -1,4 +1,4 @@
-/* $Id: privilege.c,v 1.8 2004/06/17 09:07:12 ekohl Exp $ 
+/* $Id: privilege.c,v 1.9 2004/08/15 17:03:15 chorns Exp $ 
  *
  * COPYRIGHT:       See COPYING in the top level directory
  * PROJECT:         ReactOS system libraries
@@ -9,9 +9,7 @@
  *	20010317 ea	stubs
  */
 
-#define NTOS_MODE_USER
-#include <ntos.h>
-#include <windows.h>
+#include "advapi32.h"
 
 
 /**********************************************************************
